--- a/public/form-stylesheet.css
+++ b/public/form-stylesheet.css
@@ -56,3 +56,17 @@ margin-left:-350px;
 #submit-button:hover {
   border-width: 4px;
 }
+
+@media screen and (max-width: 499px){
+
+  .wrapper {
+    width:90%;
+    margin-left:5%;
+    left: 0;
+  }
+
+  textarea {
+    width:90%;
+  }
+
+}
